RESOLVED FIXED44750
[Crash] <animateMotion> element directly inside <symbol> element causes crash when referenced by <use>
https://bugs.webkit.org/show_bug.cgi?id=44750
Summary [Crash] <animateMotion> element directly inside <symbol> element causes crash...
Shane Stephens
Reported 2010-08-26 23:36:43 PDT
Created attachment 65680 [details] SVG that causes webkit to crash (See http://code.google.com/p/chromium/issues/detail?id=50820) The attached SVG causes a crash inside webkit when loaded.
Attachments
SVG that causes webkit to crash (274 bytes, image/svg+xml)
2010-08-26 23:36 PDT, Shane Stephens
no flags
Proposed patch (3.88 KB, patch)
2010-08-29 21:51 PDT, Shane Stephens
no flags
Shane Stephens
Comment 1 2010-08-29 21:51:33 PDT
Created attachment 65876 [details] Proposed patch
Dimitri Glazkov (Google)
Comment 2 2010-09-06 08:41:33 PDT
Comment on attachment 65876 [details] Proposed patch ok.
WebKit Commit Bot
Comment 3 2010-09-06 09:52:02 PDT
Comment on attachment 65876 [details] Proposed patch Clearing flags on attachment: 65876 Committed r66836: <http://trac.webkit.org/changeset/66836>
WebKit Commit Bot
Comment 4 2010-09-06 09:52:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.