2010-09-06  Shane Stephens  <shanestephens@google.com>

Reviewed by Dimitri Glazkov.

        [Crash] <animateMotion> element directly inside <symbol> element causes crash when referenced by <use>
        https://bugs.webkit.org/show_bug.cgi?id=44750

        Added test case to demonstrate crash bug.

        * svg/dom/symbol-embeddedAnimation-expected.txt: Added.
        * svg/dom/symbol-embeddedAnimation.svg: Added.
2010-09-06  Shane Stephens  <shanestephens@google.com>

        Reviewed by Dimitri Glazkov.

        [Crash] <animateMotion> element directly inside <symbol> element causes crash when referenced by <use>
        https://bugs.webkit.org/show_bug.cgi?id=44750

        Fixes crash by checking for null transforms and skipping update step
        when appropriate.

        Test: svg/dom/symbol-embeddedAnimation.svg

        * svg/SVGAnimateMotionElement.cpp:
        (WebCore::SVGAnimateMotionElement::applyResultsToTarget):

git-svn-id: svn://svn.chromium.org/blink/trunk@66836 bbb929c8-8fbe-4397-9dbb-9b2b20218538